--- a/index.html
+++ b/index.html
@@ -2,9 +2,55 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
     <title>Title</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
+<div id="sLang" class="form" style="">
+    <form class="form text-center">
+<!--        <div class="row" >
+            <img class="mb-4" src="img/bootstrap-solid.svg" alt="" width="72" height="72">
+            <hr noshade style="height: 50px; width: 1px;">
+            <img class="mb-4" src="img/bootstrap-solid.svg" alt="" width="72" height="72">
+        </div> -->
+        <h1 class="h3 mb-3 font-weight-normal">Select langauge:</h1>
 
+        <div class="">
+            <select class="custom-select custom-select-lg mb-3" id="lang" required>
+                <option value="" >Choose...</option>
+                <option name="lang" value="EN">English</option>
+                <option name="lang" value="RU">Russian</option>
+            </select>
+            <div class="invalid-feedback">
+                Please select a valid language.
+            </div>
+        </div>
+
+    </form>
+</div>
+
+<div id="auth" class="form" style="display: none;">
+    <form class="form">
+        <div id="phone">
+            <h1 class="h3 mb-3 font-weight-normal">Enter phone number</h1>
+            <label for="inputPhone" class="sr-only">Phone</label>
+            <input type="tel" pattern="7[0-9]{10}" id="inputPhone" class="form-control" placeholder="72345678990" required autofocus>
+        </div>
+        <div id="code" style="display: none;">
+            <h1 class="h3 mb-3 font-weight-normal">Enter code from SMS</h1>
+            <label for="inputCode" class="sr-only">Code</label>
+            <input type="text" id="inputCode" class="form-control" placeholder="Code">
+        </div>
+        <button class="btn btn-lg btn-primary btn-block" style="margin-top: 25px;" type="submit">Confirm</button>
+    </form>
+</div>
 </body>
 </html>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="js/main.js"></script>
