--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="css/style.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
 <div id="sLang" class="form" style="">
     <form class="form text-center shadow">
-        <h1 class="h3 mb-3 font-weight-normal">Select language:</h1>
+        <h1 class="h3 mb-3 font-weight-normal">Select language/Выберите язык:</h1>
 
         <div class="">
             <select class="custom-select custom-select-lg mb-3" id="lang" required>
-                <option value="" >Choose...</option>
+                <option value="" >---</option>
                 <option name="lang" value="EN">English</option>
-                <option name="lang" value="RU">Russian</option>
+                <option name="lang" value="RU">Русский</option>
             </select>
             <div class="invalid-feedback">
                 Please select a valid language.
