--- a/index.html
+++ b/index.html
@@ -41,10 +41,7 @@
          </div>
           <h1 id="title" class="h3 mb-3 font-weight-normal">Добро пожаловать в Петропавловск-Камчатский</h1>
           <p id="content" class="content">Вы находитесь в зоне действия бесплатной общественной сети Wi-Fi, организованной администрацией Петропавловск-Камчатского городского округа совместно с ООО "ИнтерКамСервис".</p>
-          <ul class="services">
-          	<li><a href="#"><img src="img/wifi.svg" alt="" width="40" height="40"> <span id="svc1">Зона покрытия Wi-Fi</span></a></li>
-          	<li><a href="#"><img src="img/location.svg" alt="" width="40" height="40"> <span id="svc2">Туристическая карта города</span></a></li>
-          </ul>
+          <img class="area" src="img/area.jpg">
           <p id="info">Для доступа к сети «Интернет» пройдите идентификацию.</p>
         </div>
       <form class="form-signin">
